# OBSBot_Test

./: .gitignore  README.md
src/cpp_orbbec/: CMakeLists.txt
src/cpp_orbbec/src/: main.cpp
src/orbbecFemtoMega/: 1.txt  2.txt  3.txt  c_d_p.py  color_depth.py  orbbec_official_pointcloud.py
src/osc/: osc_test.py
src/ultralytics_YOLO/: convert_pt_to_onnx.py  ultralytic_hand_tracking.py  ultralytic_human_tracking.py  ultralytic_test.py  ultralytic_test_line.py  ultralytic_test_normal.py  ultralytic_test_obj.py  ultralytic_test_obj_bak.py
src/visca/: visca_test.py
